--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2>HTML Forms</h2>
 
-<form action="">
+<form action="https://formsubmit.co/el/miwanu" method="POST">
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
