--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <h2>HTML Forms</h2>
 
 <form action="https://formsubmit.co/jamie.delina@kodego.ph" method="POST">
-  <label for="fname">First name:</label><br>
+   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname" ><br>
-  <label for="email" class="text-white ">Your Email</label> <br>
-  <input type="email" class="form-control bg-transparent"> <br> 
-  <label for="message text-white">Special Request</label><br>
-  <textarea id="message" style="height:100px" required></textarea>
+  <label for="email">Email:</label><br>
+  <input type="email" id="email" name="email" ><br>
+  <label for="message">Special Request</label><br>
+  <textarea style="height:100px" required></textarea>
   <br> <br>
   <input type="submit" value="Submit">
 </form> 
