--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
   <h2>HTML Forms</h2>
-<form action="">
+<form action="https://formsubmit.co/jamie.delina@kodego.ph" method="POST">
   <input type="text"  name="fname" placeholder="Full name" required><br>
   <input type="email"  name="Email" placeholder="Email" required><br>
   <select name="Color"> 
