--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <br>
   <textarea name="Message" placeholder="Message" required> </textarea> <br>
   <button type="submit">Send </button>
-  <input type="hidden" name="_next" value="https://jdelina.github.io/gmail/index.html">
+  <input type="hidden" name="_next" value="https://jdelina.github.io/gmail/">
 </form> 
 </div>
 
