--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
   <br>
   <textarea name="Message" placeholder="Message" required> </textarea> <br>
   <button type="submit">Send </button>
+      <input type="hidden" name="_next" value=" ">
 </form> 
-      <input type="hidden" name="_next" value="https://jdelina.github.io/gmail/">
+    
 </div>
 
 <p>If you click the "Submit" button, the form-data will be sent to your email.</p>
