--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   </select>
   <br>
   <textarea name="Message" placeholder="Message" required> </textarea> <br>
-  <button type="submit">Send </button>
+  <input type="submit" value="Submit" id="formsbutton" onclick="alert ('helloo world')">
+  <input type="hidden" name="_next" value="https://jdelina.github.io/wd33p/">
+  <input type="hidden" name="_autoresponse" value="Thank you for messaging us">
 </form> 
-    
 </div>
 
 <p>If you click the "Submit" button, the form-data will be sent to your email.</p>
