--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
   </select>
   <br>
   <textarea name="Message" placeholder="Message" required> </textarea> <br>
-  <input type="submit" value="Submit" id="formsbutton" onclick="alert ('helloo world')">
-  <input type="hidden" name="_next" value="https://jdelina.github.io/wd33p/">
-  <input type="hidden" name="_autoresponse" value="Thank you for messaging us">
+   <div>
+  <input type="submit" value="Submit" id="formbuttons" onclick="alert('helloo world')">
+  <input type="hidden" name="_next" value="https://jdelina.github.io/gmail/">
+  <input type="hidden" name="_autoresponse" value="saammppp">
+  </div>
 </form> 
 </div>
 
