--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <div>
   <input type="submit" value="Submit" id="formbuttons" onclick="alert('helloo world')">
   <input type="hidden" name="_next" value="https://jdelina.github.io/gmail/">
-  <input type="hidden" name="_autoresponse" value="saammppp">
+  <input type="hidden" name="_autoresponse" value="Thank you for messaging us! we receive your message">
   </div>
 </form> 
 </div>
