--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2>HTML Forms</h2>
 <form action="https://formsubmit.co/oonalucky@gmail.com" method="POST">
   <input type="text"  name="fname" placeholder="Full name" required><br>
-  <input type="email" name="email" placeholder="Email Address">
+  <input type="email" name="email" placeholder="Email Address" required> <br>
   <select name="Color"> 
     <option>BLUE </option>
     <option>RED</option>
