--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
 <p>If you click the "Submit" button, the form-data will be sent to your email.</p>
 
 <p> From Personal Accnt </p>
+
+    <p> Sample moto </p>
 </body>
 </html>
